--- a/app/globals.css
+++ b/app/globals.css
@@ -11,3 +11,20 @@
     rgba(0, 5, 13, 0)
   );
 }
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  color: white !important;
+}
+
+.swiper-button-prev:after, .swiper-button-next:after {
+  font-size: 1rem !important; 
+}
+
+.swiper-pagination-bullet {
+  background: white !important;
+}
