--- a/app/globals.css
+++ b/app/globals.css
@@ -27,6 +27,10 @@
   font-size: 1rem !important;
 }
 
+.swiper-button-disabled {
+  visibility: hidden;
+}
+
 .swiper-pagination-bullet {
   background: white !important;
 }
